--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+*{
+    font-family: "Poppins", sans-serif;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+
 
 @keyframes blob {
     0% {
@@ -21,4 +32,13 @@
 
 .animate-blob {
     animation: blob 10s infinite ease-in-out;
+}
+.backgroundImage {
+    skills-gradient: 'linear-gradient(38.73deg, rgba(204, 0, 187, 0.15) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0,70,209,0) 50%, rgba(0,70,209,0.15) 100%)'
+}
+
+@layer utilities{
+    .clip-path-custom{
+        clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 0 100%);
+    }
 }
