--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ html {
     scroll-behavior: smooth;
 }
 
+/* Blob Animation */
 @keyframes blob {
     0% {
         transform: translate(0px, 0px) scale(1);
@@ -33,11 +34,13 @@ html {
     animation: blob 10s infinite ease-in-out;
 }
 
+/* Background Gradient */
 .backgroundImage {
     background-image: linear-gradient(38.73deg, rgba(204, 0, 187, 0.15) 0%, rgba(201, 32, 184, 0) 50%),
         linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.15) 100%);
 }
 
+/* Clip Paths */
 @layer utilities {
     .clip-path-custom {
         clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 0 100%);
@@ -48,6 +51,21 @@ html {
     }
 
     .clip-path-custom-3 {
-            clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 96%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 96%, 0 100%);
+    }
+
+    /* Shining Effect Animation */
+        @keyframes shine {
+            0% {
+                transform: translateX(-100%);
+            }
+    
+            100% {
+                transform: translateX(200%);
+            }
+        }
+    
+        .animate-shine {
+            animation: shine 2s ease-in-out forwards;
         }
 }
